--- a/css/styles.css
+++ b/css/styles.css
@@ -12,18 +12,21 @@ h1 {
 	font-family: 'IBM Plex Serif', serif;
 }
 
+/* Navigation Styles */
+
 nav {
 	align-items: center;
 	background-color: #132A38;
 	color: #FFFFFF;
 	display: flex;
-	height: 30px;
+	height: 35px;
 	justify-content: space-between;
 	padding: 0.5rem 1rem;
 }
 
 nav a {
 	color: #FFFFFF;
+	font-size: 0.9rem;
 	font-weight: 100;
 	text-decoration: none;
 }
@@ -34,6 +37,7 @@ nav a:hover {
 
 nav p {
 	font-family: 'IBM Plex Serif', serif;
+	font-size: 1.2rem;
 }
 
 nav ul {
@@ -46,3 +50,29 @@ nav li:first-of-type {
 	margin-right: 10px;
 }
 
+/* Header Styles */
+
+.hero {
+	position: relative;
+	width: 100%;
+}
+
+.header h1 {
+	font-size: 3rem;
+	font-weight: 300;
+}
+
+.header {
+	background-color: #EAEAEA;
+	bottom: -20%;
+	margin: 0 15% 0 0;
+	position: absolute;
+}
+
+@media only screen and (min-width: 600px) {
+  .header__wrapper {
+  	padding: 5% 15%;
+    bottom: 10%;
+    width: 75%;
+  }
+}
