--- a/css/styles.css
+++ b/css/styles.css
@@ -100,10 +100,13 @@ nav li:first-of-type {
 .header__byline ul {
 	display: flex;
 	flex-flow: row wrap;
+	font-size: 0.8rem;
 	line-height: 0.2rem;
 	list-style-type: none;
 	margin: -10px 0 30px 0;
-	padding-inline-start: 0;
+	padding-start: 0;
+	-webkit-padding-start: 0;
+	width: 110%;
 }
 
 .header__byline li {
